frontend/src/components/SwimLane.css
.swimLane {
    width: 25%;
    border-right: solid;
    display: flex;
    flex-direction: column;
}

.swimLane .swimLaneHeader {
    text-align: center;
    margin-bottom: 8px;
}

.swimLane .swimLaneBoats {
    display: flex;
    flex-direction: column;
    align-items: center;
}

@media screen and (max-width: 500px) {
    .swimLane {
        width: 100%;
        border-bottom: solid;
    }
}

